--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "clear; node --no-warnings --es-module-specifier-resolution=node --experimental-specifier-resolution=node --loader ts-node/esm ",
-    "build": "tsc -v; rm -rf build && tsc -b tsconfig.json && yarn generate:types",
+    "build": "tsc -v; rm -rf build && tsc -b tsconfig.json"
   },
   "devDependencies": {
     "@types/node": "^20.4.0",
