--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "tuya2mqtt",
   "version": "1.0.0",
   "dependencies": {
+    "@tuya/tuya-connector-nodejs": "^2.1.2",
     "mqtt": "^4.3.7",
-    "rxjs": "^7.8.1",
-    "tuyapi": "^7.5.2"
+    "rxjs": "^7.8.1" 
   },
   "scripts": {
     "dev": "clear; node --no-warnings --es-module-specifier-resolution=node --experimental-specifier-resolution=node --loader ts-node/esm ",
-    "build": "tsc -v; rm -rf build && tsc -b tsconfig.json"
+    "build": "tsc -v; rm -rf build && tsc -b tsconfig.json",
+    "start":"clear; node --no-warnings --es-module-specifier-resolution=node --experimental-specifier-resolution=node build/index.js"
   },
   "devDependencies": {
     "@types/node": "^20.4.0",
